load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["exporter.go"],
    importpath = "github.com/bitrise-steplib/steps-generate-changelog/exporter",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/bitrise-io/envman/envman:go_default_library",
        "//vendor/github.com/bitrise-io/go-steputils/tools:go_default_library",
        "//vendor/github.com/bitrise-io/go-utils/fileutil:go_default_library",
    ],
)
